<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/alert_statistics"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/floodRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView10">

        <ImageView
            android:id="@+id/floodImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/flood" />

        <TextView
            android:id="@+id/floodTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/floodImageView"
            android:text="@string/flood_incidents"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/floodIncidentsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/floodTextView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/floodImageView"
            android:drawablePadding="2dp"
            android:text="@string/flood_incidents_number" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/fireRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/floodRelativeLayout"
        >

        <ImageView
            android:id="@+id/fireImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/fire" />

        <TextView
            android:id="@+id/fireTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/fireImageView"
            android:text="@string/fire_incidents"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/fireIncidentsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fireTextView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/fireImageView"
            android:drawablePadding="2dp"
            android:text="@string/fire_incidents_number"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/earthquakeRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fireRelativeLayout">

        <ImageView
            android:id="@+id/earthquakeImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/earthquake" />

        <TextView
            android:id="@+id/earthquakeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/earthquakeImageView"
            android:text="@string/earthquake_incidents"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/earthquakeIncidentsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/earthquakeTextView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/earthquakeImageView"
            android:drawablePadding="2dp"
            android:text="@string/earthquake_incidents_number" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/otherRelativeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/earthquakeRelativeLayout">

        <ImageView
            android:id="@+id/otherImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/danger" />

        <TextView
            android:id="@+id/otherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/otherImageView"
            android:text="@string/other_incidents"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/otherIncidentsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/otherTextView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/otherImageView"
            android:drawablePadding="2dp"
            android:text="@string/other_incidents_number"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>